# datarobot-workload-api-mcp-server

./: .gitignore  Dockerfile  README.md  claude_desktop_proxy.py  openapi.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  start-mcp.sh  wapi_mcp_server.py
.github/workflows/: ci.yml  docker.yml
tests/: __init__.py  test_client.py  test_credentials.py  test_helpers.py  test_integration.py  test_server.py  test_tools_unit.py
wapi_mcp/: __init__.py  client.py  exceptions.py  helpers.py  telemetry.py
