[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wapi-mcp-server"
version = "1.0.0"
description = "MCP Server for the Workload API Platform"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "DataRobot", email = "support@datarobot.com" }
]
keywords = ["mcp", "workload", "api", "datarobot", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=2.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
]

[project.scripts]
wapi-mcp-server = "wapi_mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
